# nautilus

./: .env_old  .env_sample  .gitignore  README.md  TODO.md  XAUUSD_data_16385.csv  XAUUSD_data_16385.parquet  backtest-plotting.ipynb  backtest.html  backtest.py  backtest_1.html  backtest_1.ipynb  backtest_1.py  backtest_2.ipynb  backtest_2.py  backtest_3.py  backtest_4.py  backtest_5.py  backtest_base.ipynb  backtest_bb_script.html  backtest_bb_script.py  backtest_bbcluster.ipynb  backtest_test_example_ema.ipynb  backtest_test_visualization.ipynb  data_utils.py  dev.ipynb  example.db  fft.ipynb  gui.sh  indicators.py  live_plot.py  main.py  metatrader-adapter.py  monitor.sh  mt5-backtesting-data.ipynb  mt5-catalog.ipynb  mt5_test.py  my_plot.html  nautilus.db  nautilus.db.wal  (+13 more)
data/: EURUSD.csv  GBPUSD.csv  SP500m.csv  USDJPY.csv
docker/: .env copy  .env_sample copy  docker-compose.yml  run_quest.sh
docker/grafana/: start.sh
docker/grafana_data/: grafana.db
docker/influxdb/: start.sh
docker/influxdb_data/: influxd.bolt
docker/promtail-config/: promtail-config.yml
docker/questdb_data/: hello.txt
naut_mt5/: __init__.py  data_utils.py
put101/: __init__.py  indicators.py  utils.py  vizz.py
quantstats/: qs_tearsheet.html
scripts/: show_logs.sh
strategies/: base.py  base_1.py  base_2.py  base_3.py  base_4.py  base_5.py  bollinger_cluster.py  setup.py
strategies/v1_6/: backtest.py  base.py  trade.py  trade_factory.py
strategies/v1_7/: backtest.py  base.py  trade.py  trade_factory.py  trade_manager.py  utils.py
strategies/v1_8/: backtest.py  base.py
strategies/v2_0/: backtest.py  backtest_optuna.py  base.py  optimize.py  utils.py
strategies/v2_1/: backtest.py  base.py  optimize.py  trade.py  trade_factory.py  trade_manager.py
strategies/v2_2/: base.py  optimize.py
strategies/v2_3/: base.py  optimize.py  trade.py
strategies/v2_4/: base.py  utils.py  (+1 more)
(+3859 files in other folders)
